--- a/descarga-era.ipynb
+++ b/descarga-era.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## En esta rutina se usan dos opciones de descarga de datos de ERA5 \n",
+    "## Descarga ERA5\n",
+    "### En esta rutina se usan dos opciones de descarga de datos de ERA5 \n",
     "\n",
-    "Para la *primera opcion* es necesario estar logueado en Copernicus y haver generado una key\n",
+    "Para la *primera opcion* es necesario estar logueado en Copernicus y haber generado una key\n",
+    "\n",
     "Para la *segunda opcion* se accede a los datos que están en AWS de forma directa. "
    ]
   },
